Bug 1249698 - Use parent stack instead of vanished child stack. r=billm

MozReview-Commit-ID: LaX5K1uPZo9